--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ default.sender=jhonirsc@gmail.com
 default.recipient=jhonirsc@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=8640000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=jhoni
+s3.region=sa-east-1
