Tratando exceções adequadamente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=jhonirsc@gmail.com
 default.recipient=jhonirsc@gmail.com
@@ -6,7 +6,7 @@ default.recipient=jhonirsc@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=8640000
 
-aws.access_key_id=**
-aws.secret_access_key=**
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=jhoni
 s3.region=sa-east-1
