--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ default.recipient=jhonirsc@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=8640000
 
-aws.access_key_id=
-aws.secret_access_key=
+aws.access_key_id=AKIAJTWVYNNE7WLHPNQQ
+aws.secret_access_key=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
 s3.bucket=jhoni
 s3.region=sa-east-1
 
