--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.profiles.active=test
+spring.profiles.active=prod
 
-default.sender=jhonirsc@gmail.com
-default.recipient=jhonirsc@gmail.com
+default.sender=jhoni.test.dev@gmail.com
+default.recipient=jhoni.test.dev@gmail.com
 
-jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.secret=PeloPoderDaVerdadeEuConquistareiOUniverso
 jwt.expiration=8640000
 
-aws.access_key_id=:)
-aws.secret_access_key=:(
+aws.access_key_id=AKIAIEKIIFDADEP5KRNA
+aws.secret_access_key=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
 s3.bucket=jhoni
 s3.region=sa-east-1
 
