--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,8 +5,8 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=jhonirsc@gmail.com
-spring.mail.password=analiSist2016Gg
+spring.mail.username=jhoni.test.dev@gmail.com
+spring.mail.password=desenvolvimento
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
