--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=test
 
 default.sender=jhoni.test.dev@gmail.com
 default.recipient=jhoni.test.dev@gmail.com
@@ -6,8 +6,8 @@ default.recipient=jhoni.test.dev@gmail.com
 jwt.secret=PeloPoderDaVerdadeEuConquistareiOUniverso
 jwt.expiration=8640000
 
-aws.access_key_id=AKIAIEKIIFDADEP5KRNA
-aws.secret_access_key=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
+aws.access_key_id=
+aws.secret_access_key=/5mb4RT
 s3.bucket=jhoni
 s3.region=sa-east-1
 
